--- a/views/compose.ejs
+++ b/views/compose.ejs
@@ -1,7 +1,14 @@
 <%- include("partials/header"); %> 
 <h1>Compose</h1>
 <form action="/compose" method="post">
-    <input type="text" name="" id="">
-    <button type="submit">Publish</button>
+    <div class="form-group">
+        <label for="composeTitle">Title</label>
+        <input type="text" name="composeItem" id="composeTitle" class="form-control">
+    </div>
+    <div class="form-group">
+        <label for="composeInfo">Post</label>
+        <textarea name="composeInfo" id="composeInfo" cols="30" rows="10" class="form-control"></textarea>
+    </div>
+    <button type="submit" class="btn btn-primary">Publish</button>
 </form>
 <%- include("partials/footer"); %> 
